font fix, more info icon, hiding crane on mobile

--- a/TrevorTumasDotCom/Content/Site.css
+++ b/TrevorTumasDotCom/Content/Site.css
@@ -116,7 +116,7 @@
 }
 
 body {
-    font-family: Garamond, sans-serif;
+    font-family: Garamond, Georgia, serif;
     font-size: large;
     padding-top: 50px;
     padding-bottom: 20px;
